--- a/config/database.yml
+++ b/config/database.yml
@@ -22,13 +22,13 @@ default: &default
 
 development:
   <<: *default
-  database: askvote_development
+  database: moneygun_development
 
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
   # the same name as the operating system user running Rails.
-  #username: askvote
+  #username: moneygun
 
   # The password associated with the PostgreSQL role (username).
   #password:
@@ -56,7 +56,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: askvote_test
+  database: moneygun_test
 
 # As with config/credentials.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
@@ -80,6 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: askvote_production
-  username: askvote
-  password: <%= ENV["ASKVOTE_DATABASE_PASSWORD"] %>
+  database: moneygun_production
+  username: moneygun
+  password: <%= ENV["MONEYGUN_DATABASE_PASSWORD"] %>
