adds invitation_status to memberships

--- a/test/fixtures/memberships.yml
+++ b/test/fixtures/memberships.yml
@@ -4,8 +4,10 @@ one:
   organization: one
   user: one
   role: admin
+  invitation_status: active
 
 two:
   organization: two
   user: two
   role: member
+  invitation_status: active
