--- a/render.yaml
+++ b/render.yaml
@@ -16,8 +16,8 @@ services:
     plan: free
     # plan: starter
     region: frankfurt
-    buildCommand: "./bin/render-build.sh"
-    # buildCommand: bundle install && bundle exec rails assets:precompile && bundle exec rails assets:clean && bundle exec rails db:migrate
+    # buildCommand: "./bin/render-build.sh"
+    buildCommand: bundle install && bundle exec rails assets:precompile && bundle exec rails assets:clean && bundle exec rails db:migrate
     # preDeployCommand: "bundle exec rails db:migrate" # preDeployCommand only available on paid instance types
     startCommand: bundle exec rails server
     # startCommand: ./bin/rails server
