Add membership request management functionality
- Introduced Organizations::MembershipRequestsController for handling membership requests, including approval and rejection actions.
- Created Users::MembershipRequestsController for users to submit membership requests to organizations.
- Added MembershipRequest model to manage request logic and validations.
- Updated views for displaying and managing membership requests, including new index and user request forms.

--- a/test/fixtures/access_requests.yml
+++ b/test/fixtures/access_requests.yml
@@ -13,3 +13,10 @@ invite_to_organization_two:
   status: pending
   type: AccessRequest::InviteToOrganization
   resources: '{ "organization_role": "member" }'
+
+membership_request_one:
+  organization: one
+  user: three
+  status: pending
+  type: AccessRequest::UserRequestForOrganization
+  resources: '{ "organization_role": "member" }'
