--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -10,5 +10,8 @@ one:
 two:
   email: hello@superails.com
 
+three:
+  email: natan@superails.com
+
 unassociated:
   email: unassociated@superails.com
