--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -142,8 +142,10 @@ ignore_missing:
   - '{devise,simple_form}.*'
 
 ## Consider these keys used:
-# ignore_unused:
-# - 'activerecord.attributes.*'
+ignore_unused:
+- 'activerecord.attributes.*'
+- 'activerecord.models.*'
+- 'routes.*'
 # - '{devise,kaminari,will_paginate}.*'
 # - 'simple_form.{yes,no}'
 # - 'simple_form.{placeholders,hints,labels}.*'
