--- a/config/settings.yml
+++ b/config/settings.yml
@@ -7,16 +7,16 @@ shared:
     email: hello@superails.com
     address: Warsaw, Poland, 02-691
   pro_features:
-    - ☑️ Access the paywalled page
+    - ✅ Топ 100 аудіокниг українською — з приємною озвучкою + pdf
   plans:
-    - id: price_1RDRzvLRcgxgTmfQZVdAF93B
-      unit_amount: 9900
-      currency: USD
+    - id: price_1RVpRpLRcgxgTmfQZANjO18k
+      unit_amount: 2900
+      currency: PLN
       interval: month
-    - id: price_1RDRzwLRcgxgTmfQZigxB6ZM
-      unit_amount: 99900
-      currency: USD
-      interval: year
+    - id: price_1RVpSELRcgxgTmfQSSCA9v4X
+      unit_amount: 9900
+      currency: PLN
+      interval: рік
 production:
   plans:
     - id: price_1RDRzvLRcgxgTmfQZVdAF93B
