--- a/config/settings.yml
+++ b/config/settings.yml
@@ -8,6 +8,9 @@ shared:
     address: Warszawa, Polska
   pro_features:
     - ✅ Топ 100 аудіокниг українською — з приємною озвучкою + pdf
+    - 🎧 Ексклюзивні аудіокниги тільки для преміум користувачів
+    - 📚 Щотижневі новинки - нові книги кожного тижня
+    - 🚀 Завантаження без обмежень - скачуйте будь-які книги офлайн
   plans:
     - id: price_1RVpRpLRcgxgTmfQZANjO18k
       unit_amount: 2900
