--- a/config/settings.yml
+++ b/config/settings.yml
@@ -22,11 +22,11 @@ shared:
       interval: рік
 production:
   plans:
-    - id: price_1RDRzvLRcgxgTmfQZVdAF93B
-      unit_amount: 9900
-      currency: USD
+    - id: price_1RVrKrLRcgxgTmfQCguQqoIX
+      unit_amount: 2900
+      currency: PLN
       interval: month
-    - id: price_1RDRzwLRcgxgTmfQZigxB6ZM
-      unit_amount: 99900
-      currency: USD
+    - id: price_1RVrL9LRcgxgTmfQlbYLNxKU
+      unit_amount: 9900
+      currency: PLN
       interval: year
