--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,4 +1,4 @@
-require:
+plugins:
   - rubocop-rails
 
 AllCops:
@@ -50,4 +50,7 @@ Metrics/PerceivedComplexity:
   Enabled: false
 
 Metrics/ParameterLists:
+  Enabled: false
+
+Naming/PredicateMethod:
   Enabled: false
