--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,6 +7,7 @@ AllCops:
   Exclude:
     - '**/db/schema.rb'
     - '**/db/**/*'
+    - 'config/**/*'
     - 'bin/*'
     - app/models/concerns/obfuscates_id.rb
 
