--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -3,6 +3,7 @@
     "esbenp.prettier-vscode",
     "bradlc.vscode-tailwindcss",
     "eamodio.gitlens",
-    "elia.erb-formatter"
+    "elia.erb-formatter",
+    "marcoroth.herb-lsp"
   ]
 }
