--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -7,7 +7,7 @@ AllCops:
   Exclude:
     - '**/db/schema.rb'
     - '**/db/**/*'
-    - 'config/**/*'
+    - 'config/environments/**/*'
     - 'bin/*'
     - 'vendor/bundle/**/*'
     - 'node_modules/**/*'
