--- a/fly.toml
+++ b/fly.toml
@@ -1,32 +1,31 @@
-# fly.toml app configuration file generated for moneygun on 2024-01-01T00:00:00Z
+# fly.toml app configuration file generated for moneygun-black-forest-954 on 2025-11-28T13:59:29+01:00
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = "moneygun"
-primary_region = "iad"
+app = 'moneygun-black-forest-954'
+primary_region = 'iad'
 
 [build]
-  dockerfile = "Dockerfile"
+  dockerfile = 'Dockerfile'
 
 [env]
-  RAILS_ENV = "production"
-  BUNDLE_WITHOUT = "development:test"
-  SOLID_QUEUE_IN_PUMA = "true"
-  JEMALLOC_ENABLED = "true"
-  MALLOC_ARENA_MAX = "2"
-  SENSIBLE_DEFAULTS = "enabled"
+  BUNDLE_WITHOUT = 'development:test'
+  JEMALLOC_ENABLED = 'true'
+  MALLOC_ARENA_MAX = '2'
+  RAILS_ENV = 'production'
+  SENSIBLE_DEFAULTS = 'enabled'
+  SOLID_QUEUE_IN_PUMA = 'true'
 
 [http_service]
   internal_port = 80
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
 [[vm]]
-  memory_mb = 1024
-  cpu_kind = "shared"
+  cpu_kind = 'shared'
   cpus = 1
-
+  memory_mb = 1024
