Add Devise confirmable to User model

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,12 +7,16 @@
 one:
   email: yaro@superails.com
   admin: true
+  confirmed_at: <%= Time.current %>
 
 two:
   email: hello@superails.com
+  confirmed_at: <%= Time.current %>
 
 three:
   email: natan@superails.com
+  confirmed_at: <%= Time.current %>
 
 unassociated:
   email: unassociated@superails.com
+  confirmed_at: <%= Time.current %>
