--- a/fly.toml
+++ b/fly.toml
@@ -23,7 +23,7 @@ console_command = '/rails/bin/rails console'
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = 'stop'
+  auto_stop_machines = "off"
   auto_start_machines = true
   min_machines_running = 1
   processes = ['app']
