--- a/config/database.yml
+++ b/config/database.yml
@@ -85,9 +85,7 @@ test:
 production:
   primary: &primary_production
     <<: *default
-    database: moneygun_production
-    username: moneygun
-    password: <%= ENV["MONEYGUN_DATABASE_PASSWORD"] %>
+    url: <%= ENV.fetch("DATABASE_URL", "") %>
     pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 }.to_i + 2 %>
     checkout_timeout: 5
     # Reap stale connections more frequently (important for Fly.io autostop/autostart)
