--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,9 +1,3 @@
 {
-  "recommendations": [
-    "esbenp.prettier-vscode",
-    "bradlc.vscode-tailwindcss",
-    "eamodio.gitlens",
-    "elia.erb-formatter",
-    "marcoroth.herb-lsp"
-  ]
+  "recommendations": ["esbenp.prettier-vscode", "bradlc.vscode-tailwindcss", "eamodio.gitlens", "marcoroth.herb-lsp"]
 }
