--- a/config/i18n-tasks.yml
+++ b/config/i18n-tasks.yml
@@ -106,8 +106,8 @@ search:
 
 ## Translation Services
 translation:
-  openai_api_key: "sk-proj-"
-  openai_model: "gpt-4o-mini" # see https://platform.openai.com/docs/models
+  openai_api_key: 'sk-proj-'
+  openai_model: 'gpt-4o-mini' # see https://platform.openai.com/docs/models
 
 ## Do not consider these keys missing:
 ignore_missing:
@@ -116,10 +116,10 @@ ignore_missing:
 
 ## Consider these keys used:
 ignore_unused:
-- 'activerecord.attributes.*'
-- 'activerecord.models.*'
-- 'routes.*'
-- '{devise,errors.messages}.*'
+  - 'activerecord.attributes.*'
+  - 'activerecord.models.*'
+  - 'routes.*'
+  - '{devise,errors.messages}.*'
 # - '{devise,kaminari,will_paginate}.*'
 # - 'simple_form.{yes,no}'
 # - 'simple_form.{placeholders,hints,labels}.*'
