rm ruby_llm (not core gem for boilerplate, can change api & db often)

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -9,7 +9,7 @@ shared:
   plan_price_ids:
     - price_1SYWIEGHcaLYld8I3aEP3Qpp
     - price_1SYWIdGHcaLYld8IFWrZkAho
-production:
-  plan_price_ids:
-    - price_1SYWIEGHcaLYld8I3aEP3Qpp
-    - price_1SYWIdGHcaLYld8IFWrZkAho
+# production:
+#   plan_price_ids:
+#     - price_1SYWIEGHcaLYld8I3aEP3Qpp
+#     - price_1SYWIdGHcaLYld8IFWrZkAho
