--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -11,15 +11,14 @@ servers:
   # job:
   #   hosts:
   #     - 192.168.0.1
-  #   cmd: bin/jobs
+  #   cmd: bundle exec rails solid_queue:start
 
-# Enable SSL auto certification via Let's Encrypt and allow for multiple apps on a single web server.
-# Remove this section when using multiple web servers and ensure you terminate SSL at your load balancer.
-#
+# Enable SSL auto certification via Let's Encrypt.
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
 proxy:
   ssl: true
   host: app.example.com
+  forward_headers: true
 
 # Credentials for your image host.
 registry:
@@ -35,21 +34,13 @@ registry:
 env:
   secret:
     - RAILS_MASTER_KEY
+    - DATABASE_URL
   clear:
     # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
     # When you start using multiple servers, you should split out job processing to a dedicated machine.
     SOLID_QUEUE_IN_PUMA: true
-
-    # Set number of processes dedicated to Solid Queue (default: 1)
-    # JOB_CONCURRENCY: 3
-
     # Set number of cores available to the application on each server (default: 1).
-    # WEB_CONCURRENCY: 2
-
-    # Match this to any external database server to configure Active Record correctly
-    # Use moneygun-db for a db accessory server on same machine via local kamal docker network.
-    # DB_HOST: 192.168.0.2
-
+    WEB_CONCURRENCY: 2
     # Log everything from Rails
     # RAILS_LOG_LEVEL: debug
 
@@ -61,8 +52,7 @@ aliases:
   logs: app logs -f
   dbc: app exec --interactive --reuse "bin/rails dbconsole"
 
-# Use a persistent storage volume for sqlite database files and local Active Storage files.
-# Recommended to change this to a mounted volume path that is backed up off server.
+# Use a persistent storage volume for local Active Storage files.
 volumes:
   - 'moneygun_storage:/rails/storage'
 
@@ -72,42 +62,22 @@ volumes:
 asset_path: /rails/public/assets
 
 # Configure the image builder.
+# Build on the remote server (native x86_64, no QEMU emulation needed).
 builder:
   arch: amd64
-
-  # # Build image via remote server (useful for faster amd64 builds on arm64 computers)
-  # remote: ssh://docker@docker-builder-server
-  #
-  # # Pass arguments and secrets to the Docker build process
-  # args:
-  #   RUBY_VERSION: 3.4.5
-  # secrets:
-  #   - GITHUB_TOKEN
-  #   - RAILS_MASTER_KEY
-# Use a different ssh user than root
-# ssh:
-#   user: app
+  # remote: ssh://root@192.168.0.1
 
 # Use accessory services (secrets come from .kamal/secrets).
-# accessories:
-#   db:
-#     image: mysql:8.0
-#     host: 192.168.0.2
-#     # Change to 3306 to expose port to the world instead of just local network.
-#     port: "127.0.0.1:3306:3306"
-#     env:
-#       clear:
-#         MYSQL_ROOT_HOST: '%'
-#       secret:
-#         - MYSQL_ROOT_PASSWORD
-#     files:
-#       - config/mysql/production.cnf:/etc/mysql/my.cnf
-#       - db/production.sql:/docker-entrypoint-initdb.d/setup.sql
-#     directories:
-#       - data:/var/lib/mysql
-#   redis:
-#     image: redis:7.0
-#     host: 192.168.0.2
-#     port: 6379
-#     directories:
-#       - data:/data
+accessories:
+  db:
+    image: postgres:18
+    host: 192.168.0.1
+    port: '127.0.0.1:5432:5432'
+    env:
+      clear:
+        POSTGRES_USER: moneygun
+        POSTGRES_DB: moneygun_production
+      secret:
+        - POSTGRES_PASSWORD
+    directories:
+      - moneygun_postgres_data:/var/lib/postgresql
