Sync general improvements from hypemarket boilerplate
Backport non-business infrastructure, UI, and DX improvements from
hypemarket to keep moneygun strong as the upstream boilerplate.

Infrastructure:
- Replace SolidQueue with GoodJob (initializer, migration, worker process)
- Add Lexxy rich text editor + ActionText setup
- Remove ActiveAnalytics (gem + concern)
- Add honeybadger, nondisposable, mocha gems + configs
- Active Storage: VIPS processor, AVIF support, 48h direct upload expiry
- CI: concurrency control, PR type filtering, postgres:18 pin

UI/UX:
- Split sidebar into icon rail + contextual sidebars (user/org)
- Mobile-only navbar, desktop icon rail navigation
- PWA: badge, install prompt, enhanced manifest, working service worker
- Toast-style flash messages, skip-to-content link, turbo confirm dialog
- View transitions, CTA animations, bottom sheet modals
- Dark mode meta tags (color-scheme, theme-color)
- Modal: size parameter + subtitle support
- Pagination: item range info display
- TabsComponent: better spacing + border parameter

New Stimulus controllers (11):
badge, lightbox, local_save, local_time, pwa_install, reset_form,
scroll_bottom, scroll_to_active, share, tooltip, dropzone

Helpers & utilities:
- meta_tags_helper, html_helper, time_helper (replaces local_time gem)
- Enhanced application_helper (resolve_icon, breadcrumbs, sanitize_url, etc.)
- Loofah scrubbers (auto_link, external_link)
- Enhanced Translation concern (Accept-Language header parsing)
- Lint rake task

Models:
- User: name column, avatar attachment, cached notification count
- Membership: role change notifications
- SimpleForm: range, color, dropzone input wrappers
- Seeds: idempotent organization creation

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# Solid Queue Configuration
-SOLID_QUEUE_IN_PUMA=true
+# GoodJob Configuration
+GOOD_JOB_EXECUTION_MODE=external
 
 # Avo License Key (if using Avo Pro)
 AVO_LICENSE_KEY=''
