--- a/config/deploy.yml
+++ b/config/deploy.yml
@@ -8,10 +8,10 @@ image: your-user/moneygun
 servers:
   web:
     - 192.168.0.1
-  # job:
-  #   hosts:
-  #     - 192.168.0.1
-  #   cmd: bundle exec rails solid_queue:start
+  job:
+    hosts:
+      - 192.168.0.1
+    cmd: bundle exec good_job start
 
 # Enable SSL auto certification via Let's Encrypt.
 # Note: If using Cloudflare, set encryption mode in SSL/TLS setting to "Full" to enable CF-to-app encryption.
@@ -36,9 +36,7 @@ env:
     - RAILS_MASTER_KEY
     - DATABASE_URL
   clear:
-    # Run the Solid Queue Supervisor inside the web server's Puma process to do jobs.
-    # When you start using multiple servers, you should split out job processing to a dedicated machine.
-    SOLID_QUEUE_IN_PUMA: true
+    HOST: app.example.com
     # Set number of cores available to the application on each server (default: 1).
     WEB_CONCURRENCY: 2
     # Log everything from Rails
